--- a/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.css
+++ b/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.css
@@ -1,9 +1,6 @@
 .listing {
-    background: grey;
-    border-radius: 30px;
-    padding-bottom: 30px;
-  }
-.listing-heading {
-    color: whitesmoke;
-    padding: 10px 20px 0 20px;
+  /* background: grey; */
+  /* border-radius: 30px; */
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
