--- a/frontend/to-do-app/components/to-do-list/to-do-list.component.html
+++ b/frontend/to-do-app/components/to-do-list/to-do-list.component.html
@@ -1,9 +1,18 @@
 <section>
-    <form>
-      <input type="text" placeholder="Filter ToDoLists" />
-      <button class="primary" type="button">Add</button>
-    </form>
-  </section>
-  <section class="results">
-    <app-to-do-list-item *ngFor="let toDoListItem of toDoListItems" [toDoListItem]="toDoListItem"></app-to-do-list-item>
+  <form>
+    <input type="text" placeholder="Add new ToDoLists" #newItem/>
+    <button class="primary" type="button" (click)="addToDoListItem(newItem.value)">Add</button>
+  </form>
+</section>
+<section>
+  <form>
+    <input type="text" placeholder="Filter List" #filter />
+    <button class="primary" type="button" (click)="filterList(filter.value)">Search</button>
+  </form>
+</section>
+<section class="results">
+  <app-to-do-list-item
+    *ngFor="let toDoListItem of toDoListItems"
+    [toDoListItem]="toDoListItem"
+  ></app-to-do-list-item>
 </section>
