--- a/frontend/to-do-app/src/app/app.component.html
+++ b/frontend/to-do-app/src/app/app.component.html
@@ -2,7 +2,7 @@
     <a [routerLink]="['/']">
       <header class="brand-name">
         <img class="brand-logo" src="/assets/logo.svg" alt="logo" aria-hidden="true" />
-        <p>PROPRO</p>
+        <p>MyHobbyProjects</p>
       </header>
     </a>
     <section class="content">
