--- a/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.html
+++ b/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.html
@@ -1,3 +1,7 @@
 <section class="listing">
-    <a [routerLink]="['/details', toDoListItem.id]">{{ toDoListItem.toDoListName }}</a>
+    <mat-list-item [routerLink]="['/details', toDoListItem.id]">{{ toDoListItem.name }}</mat-list-item>
+    <!-- <button type="button" (click)="deleteToDoList()"><mat-icon>delete</mat-icon></button> -->
+    <mat-action-list>
+        <button mat-icon-button mat-list-item (click)="deleteToDoList()"><mat-icon>delete</mat-icon></button>
+    </mat-action-list>
 </section>
