--- a/frontend/to-do-app/components/to-do-list/to-do-list.component.css
+++ b/frontend/to-do-app/components/to-do-list/to-do-list.component.css
@@ -34,3 +34,8 @@
         grid-template-columns: 1fr;
     }    
   } */
+.results{
+  max-width: 80%;
+  text-align: center;
+  padding-left: 10%;
+}
