--- a/frontend/to-do-app/components/to-do-list/to-do-list-item-detail/to-do-list-item-detail.component.html
+++ b/frontend/to-do-app/components/to-do-list/to-do-list-item-detail/to-do-list-item-detail.component.html
@@ -1,6 +1,6 @@
 <p>to-do-list-item-detail works!</p>
-<section *ngFor="let listItem of item?.list">
-    <p>{{listItem.item}}</p>
+<section *ngFor="let listItem of items">
+    <p>{{listItem.name}}</p>
     <mat-icon>check</mat-icon>
     <mat-icon>delete</mat-icon>
 </section>
