--- a/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.css
+++ b/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.css
@@ -1,6 +1,9 @@
 .listing {
-  /* background: grey; */
-  /* border-radius: 30px; */
   padding-bottom: 15px;
   padding-top: 15px;
+  grid-template-columns: 8fr 2fr;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  text-align: left;
 }
