--- a/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.css
+++ b/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.css
@@ -3,7 +3,10 @@
   padding-top: 15px;
   grid-template-columns: 8fr 2fr;
   display: grid;
-  justify-items: center;
+  justify-items: start;
   align-items: center;
   text-align: left;
+}
+mat-action-list {
+  display: flex;
 }
