--- a/frontend/to-do-app/components/to-do-list/to-do-list-item-detail/to-do-list-item-detail.component.html
+++ b/frontend/to-do-app/components/to-do-list/to-do-list-item-detail/to-do-list-item-detail.component.html
@@ -4,14 +4,33 @@
 ></app-filter-add-input>
 
 @if(items.length > 0){
-
 <mat-list>
-  @for(listItem of items; track listItem.id){
-  <mat-list-item>{{ listItem.name }}</mat-list-item>
-  <mat-action-list>
-    <button mat-list-item><mat-icon>check</mat-icon></button>
-    <button mat-list-item><mat-icon>delete</mat-icon></button>
-  </mat-action-list>
+  @for(listItem of items; track listItem.toDo){
+    @if(!listItem.edit){
+      <mat-list-item>{{ listItem.toDo.name }}</mat-list-item>
+      <mat-action-list>
+        <button mat-list-item><mat-icon>check</mat-icon></button>
+        <button mat-list-item (click)="updateEdit(listItem.toDo.id); setEditDefaultValue(listItem.toDo.id)"><mat-icon>edit</mat-icon></button>
+        <button mat-list-item (click)="deleteItem(listItem.toDo.id)"><mat-icon>delete</mat-icon></button>
+      </mat-action-list>
+    }@else{
+      <mat-list-item>
+        <mat-form-field [formGroup]="listItem.editForm" subscriptSizing="dynamic">
+          <input matInput type="text" formControlName="edit" #editValue />
+        </mat-form-field>
+      </mat-list-item>
+      <mat-action-list>
+        <button
+          mat-list-item
+          (click)="updateItem(listItem.toDo.id, editValue.value)"
+        >
+          <mat-icon>check</mat-icon>
+        </button>
+        <button mat-list-item (click)="updateEdit(listItem.toDo.id)">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-action-list>
+    }
   }
 </mat-list>
 } @else {
