--- a/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.html
+++ b/frontend/to-do-app/components/to-do-list/to-do-list-item/to-do-list-item.component.html
@@ -4,26 +4,27 @@
     toDoListItem.name
   }}</mat-list-item>
   <mat-action-list>
-    <button mat-icon-button mat-list-item (click)="edit(); editDefaultValue()">
+    <button mat-list-item (click)="edit(); editDefaultValue()">
       <mat-icon>edit</mat-icon>
     </button>
-    <button mat-icon-button mat-list-item (click)="deleteToDoList()">
+    <button mat-list-item (click)="deleteToDoList()">
       <mat-icon>delete</mat-icon>
     </button>
   </mat-action-list>
   }@else{
-  <mat-form-field [formGroup]="editForm">
-    <input matInput type="text" formControlName="edit" #editValue />
-  </mat-form-field>
+  <mat-list-item>
+    <mat-form-field [formGroup]="editForm" subscriptSizing="dynamic">
+      <input matInput type="text" formControlName="edit" #editValue />
+    </mat-form-field>
+  </mat-list-item>
   <mat-action-list>
     <button
-      mat-icon-button
       mat-list-item
       (click)="updateToDoList(editValue.value)"
     >
       <mat-icon>check</mat-icon>
     </button>
-    <button mat-icon-button mat-list-item (click)="edit()">
+    <button mat-list-item (click)="edit()">
       <mat-icon>close</mat-icon>
     </button>
   </mat-action-list>
