--- a/frontend/to-do-app/components/filter-add-input/filter-add-input.component.scss
+++ b/frontend/to-do-app/components/filter-add-input/filter-add-input.component.scss
@@ -1,8 +1,5 @@
 .inputs {
-  display: inline-block;
-  max-width: 80%;
-  text-align: center;
-  padding-left: 10%;
+  display: table;
 }
 .inputs mat-form-field {
   max-height: fit-content;
