--- a/frontend/to-do-app/src/styles.scss
+++ b/frontend/to-do-app/src/styles.scss
@@ -1,20 +1,34 @@
-@use '@angular/material' as mat;
-@use '@angular/material-experimental' as matx;
+@use "@angular/material" as mat;
+@use "@angular/material-experimental" as matx;
 
-$m3-dark-theme: matx.define-theme((
-  color: (
-    theme-type: dark,
-    primary: matx.$m3-violet-palette,
-    tertiary: matx.$m3-blue-palette,
+@include mat.core();
+
+$m3-dark-theme: matx.define-theme(
+  (
+    color: (
+      theme-type: dark,
+      primary: matx.$m3-violet-palette,
+      tertiary: matx.$m3-blue-palette,
+    ),
   )
-));
+);
 
-$m3-light-theme: matx.define-theme((
-  color: (
-    primary: matx.$m3-violet-palette,
-    tertiary: matx.$m3-blue-palette,
-    )
-));
+$m3-light-theme: matx.define-theme(
+  (
+    color: (
+      primary: matx.$m3-blue-palette,
+      tertiary: matx.$m3-cyan-palette,
+    ),
+    typography: (
+      brand-family: "Whisper",
+      plain-family: "Roboto flex",
+      bold-weight: 900,
+    ),
+    density: (
+      scale: -1,
+    ),
+  )
+);
 
 .dark-theme {
   @include mat.all-component-themes($m3-dark-theme);
@@ -26,5 +40,11 @@ $m3-light-theme: matx.define-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  // font-family: Roboto, "Helvetica Neue", sans-serif;
+}
