--- a/frontend/to-do-app/components/to-do-list/to-do-list-item-detail/to-do-list-item-detail.component.html
+++ b/frontend/to-do-app/components/to-do-list/to-do-list-item-detail/to-do-list-item-detail.component.html
@@ -1,21 +1,37 @@
-<app-filter-add-input
-  [addFn]="bindAdd"
-  [filterFn]="bindFilter"
-></app-filter-add-input>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title> ToDo Liste </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <app-filter-add-input
+      [addFn]="bindAdd"
+      [filterFn]="bindFilter"
+    ></app-filter-add-input>
 
-@if(items.length > 0){
-<mat-list>
-  @for(listItem of items; track listItem.toDo){
-    @if(!listItem.edit){
+    @if(items.length > 0){
+    <mat-list>
+      @for(listItem of items; track listItem.toDo){ @if(!listItem.edit){
       <mat-list-item>{{ listItem.toDo.name }}</mat-list-item>
       <mat-action-list>
         <button mat-list-item><mat-icon>check</mat-icon></button>
-        <button mat-list-item (click)="updateEdit(listItem.toDo.id); setEditDefaultValue(listItem.toDo.id)"><mat-icon>edit</mat-icon></button>
-        <button mat-list-item (click)="deleteItem(listItem.toDo.id)"><mat-icon>delete</mat-icon></button>
+        <button
+          mat-list-item
+          (click)="
+            updateEdit(listItem.toDo.id); setEditDefaultValue(listItem.toDo.id)
+          "
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-list-item (click)="deleteItem(listItem.toDo.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </mat-action-list>
-    }@else{
+      }@else{
       <mat-list-item>
-        <mat-form-field [formGroup]="listItem.editForm" subscriptSizing="dynamic">
+        <mat-form-field
+          [formGroup]="listItem.editForm"
+          subscriptSizing="dynamic"
+        >
           <input matInput type="text" formControlName="edit" #editValue />
         </mat-form-field>
       </mat-list-item>
@@ -30,9 +46,10 @@
           <mat-icon>close</mat-icon>
         </button>
       </mat-action-list>
+      } }
+    </mat-list>
+    } @else {
+    <p>No Items</p>
     }
-  }
-</mat-list>
-} @else {
-<p>No Items</p>
-}
+  </mat-card-content>
+</mat-card>
